<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/segundo_fundo"
    tools:context=".fragments.NumerosFragment">

    <ImageView
        android:id="@+id/imageOne"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/one"
        android:src="@drawable/numero_um"
        app:layout_constraintBottom_toTopOf="@+id/imageThree"
        app:layout_constraintEnd_toStartOf="@+id/imageTwo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageTwo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/two"
        android:src="@drawable/numero_dois"
        app:layout_constraintBottom_toTopOf="@+id/imageFour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageOne"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageThree"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/three"
        android:src="@drawable/numero_tres"
        app:layout_constraintBottom_toTopOf="@+id/imageFive"
        app:layout_constraintEnd_toStartOf="@+id/imageFour"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageOne" />

    <ImageView
        android:id="@+id/imageFour"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/four"
        android:src="@drawable/numero_quatro"
        app:layout_constraintBottom_toTopOf="@+id/imageSix"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageThree"
        app:layout_constraintTop_toBottomOf="@+id/imageTwo" />

    <ImageView
        android:id="@+id/imageFive"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/five"
        android:src="@drawable/numero_cinco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageSix"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageThree" />

    <ImageView
        android:id="@+id/imageSix"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/six"
        android:src="@drawable/numero_seis"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageFive"
        app:layout_constraintTop_toBottomOf="@+id/imageFour" />
</androidx.constraintlayout.widget.ConstraintLayout>